add a Rakefile to structure test runs
Having a Rakefile will allow us to change the actual test commands on
our side rather than relying on changes to the openstack-infra
repository. This should make it a lot faster to change things, but also
easier to test since the jenkins jobs are actually run in this
repository, not the openstack-infra one.

This commit defines the jobs we previously had defined in Jenkins and
uses 'high-level' naming consistently (i.e. lint, style vs. foodcritic,
rubocop).

There is also a :clean task to help with deleting the files generated by
the other jobs.

Also changed foodcritic to run on the source cookbook rather than the
one installed by berks, see
e.g. https://github.com/berkshelf/berkshelf/issues/931#issuecomment-29668369

Change-Id: I3951f7bf3b474f1b7aab46c16d91a9b431a787bf
blueprint: rakefile

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,5 @@
 AllCops:
-  Includes:
+  Include:
     - metadata.rb
     - Gemfile
     - attributes/**
@@ -8,6 +8,8 @@ AllCops:
     - recipes/**
     - resources/**
     - spec/**
+  Exclude:
+    - berks-cookbooks/**
 
 Encoding:
   Exclude:
