--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,5 @@
+inherit_from: .rubocop_todo.yml
+
 AllCops:
   Include:
     - metadata.rb
@@ -9,7 +11,9 @@ AllCops:
     - resources/**
     - spec/**
   Exclude:
-    - berks-cookbooks/**
+    - .cookbooks/**/*
+    - berks-cookbooks/**/*
+    - .bundle/**/*
 
 Encoding:
   Exclude:
