Initial Liberty Updates
MetaData Changes:
- bump metadata version to 12

Other codes changes
- change juno to kilo where appropriate
- rubocop todo file updates
- removed db2 refs

Bootstrap Changes
- Updated to 0.7.0 release of the ChefDK

Change-Id: I65745eae2e430ced0c25e8f05dd490fdad840623

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,14 +2,14 @@ inherit_from: .rubocop_todo.yml
 
 AllCops:
   Include:
-    - metadata.rb
-    - Gemfile
-    - attributes/**
-    - libraries/**
-    - providers/**
-    - recipes/**
-    - resources/**
-    - spec/**
+    - ./metadata.rb
+    - ./Gemfile
+    - attributes/**/*
+    - libraries/**/*
+    - providers/**/*
+    - recipes/**/*
+    - resources/**/*
+    - spec/**/*
   Exclude:
     - .cookbooks/**/*
     - berks-cookbooks/**/*
@@ -17,8 +17,8 @@ AllCops:
 
 Encoding:
   Exclude:
-    - metadata.rb
-    - Gemfile
+    - ./metadata.rb
+    - ./Gemfile
 
 NumericLiterals:
   Enabled: false
